<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".invitaractividad">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="135dp"
        android:layout_marginBottom="70dp"
        android:text="@string/invitaractividad"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextText"
        app:layout_constraintStart_toStartOf="@+id/editTextText"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="186dp"
        android:layout_height="0dp"
        android:layout_marginBottom="39dp"
        android:ems="10"
        android:hint="@string/idusuario"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/editTextText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="182dp"
        android:layout_height="0dp"
        android:layout_marginBottom="57dp"
        android:ems="10"
        android:hint="@string/nombreactividad"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/btnListaAmigos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <Button
        android:id="@+id/btnListaAmigos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="59dp"
        android:backgroundTint="@color/black"
        android:text="@string/listadeamigos"
        app:layout_constraintBottom_toTopOf="@+id/btnInvitarActividad"
        app:layout_constraintStart_toStartOf="@+id/editTextText2"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />

    <Button
        android:id="@+id/btnInvitarActividad"
        android:layout_width="101dp"
        android:layout_height="0dp"
        android:layout_marginBottom="98dp"
        android:backgroundTint="@color/black"
        android:text="@string/invitar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnListaAmigos" />
</androidx.constraintlayout.widget.ConstraintLayout>