<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroComunidad">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:layout_marginBottom="55dp"
        android:text="@string/registrarcomunidad"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/registroNombrecom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/registroNombrecom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="56dp"
        android:ems="10"
        android:hint="@string/nombrecomunidad"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/registroTipoactividadcom"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/registroTipoactividadcom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="39dp"
        android:ems="10"
        android:hint="@string/tipoactividad"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/registroDescripcioncom"
        app:layout_constraintStart_toStartOf="@+id/registroDescripcioncom"
        app:layout_constraintTop_toBottomOf="@+id/registroNombrecom" />

    <EditText
        android:id="@+id/registroDescripcioncom"
        android:layout_width="212dp"
        android:layout_height="0dp"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:hint="@string/descripcion"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/botonComunidadRegistrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registroTipoactividadcom" />

    <Button
        android:id="@+id/botonComunidadRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="92dp"
        android:backgroundTint="@color/black"
        android:text="@string/registrarcomunidad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/registroDescripcioncom"
        app:layout_constraintTop_toBottomOf="@+id/registroDescripcioncom" />
</androidx.constraintlayout.widget.ConstraintLayout>