<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Registrarcuenta">

    <EditText
        android:id="@+id/contraseniaregistro"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="22dp"
        android:ems="10"
        android:hint="@string/contrasenia"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toTopOf="@+id/reingresarcontrasenia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuarioregistro" />

    <EditText
        android:id="@+id/correoregistro"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="52dp"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reingresarcontrasenia" />

    <EditText
        android:id="@+id/usuarioregistro"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toTopOf="@+id/contraseniaregistro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/reingresarcontrasenia"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="37dp"
        android:ems="10"
        android:hint="@string/contrasenia2"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toTopOf="@+id/correoregistro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contraseniaregistro" />

    <Button
        android:id="@+id/button"
        android:layout_width="164dp"
        android:layout_height="0dp"
        android:layout_marginBottom="125dp"
        android:backgroundTint="@color/black"
        android:onClick="registrarusuario"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/btnRegistrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correoregistro" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="356dp"
        android:layout_height="118dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="33dp"
        app:layout_constraintBottom_toTopOf="@+id/usuarioregistro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/atletismo" />
</androidx.constraintlayout.widget.ConstraintLayout>